About Us menu item in footer was not wrapping on mobile. Used a media query and css to fix this.

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -70,3 +70,10 @@
     }
 
 }
+
+@media (max-width:386px){
+    #_us{
+      display:none;
+    }
+  }
+  
